--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: YAMT
-description: "Yet Another Minimal Theme"
-url:  "https://yamt.netlify.app" # Actual base url of the website
+title: Alessio Franceschi
+description: "Alessio PandaSekh Franceschi Blog"
+url:  "https://alessiofranceschi.me" # Actual base url of the website
 baseurl: "/"           # url of the jekyll blog. e.g. if you set url to "mysite.com" and baseurl to "blog", the jekyll website will work on "mysite.com/blog"
 author:
   name: "Alessio Franceschi"
