--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Alessio Franceschi
+title: Alessio - PandaSekh - Franceschi
 description: "Alessio PandaSekh Franceschi Blog"
 url:  "https://alessiofranceschi.me" # Actual base url of the website
 baseurl: "/"           # url of the jekyll blog. e.g. if you set url to "mysite.com" and baseurl to "blog", the jekyll website will work on "mysite.com/blog"
