--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,4 +1,5 @@
 pages:
   - {name: 'About', url: 'about.html'}
+  - {name: 'Projects', url: 'projects.html'}
   - {name: 'Contact', url: 'contact.html'}
   - {name: 'Archive', url: 'archive.html'}
