Using system stack for font and removed contact form

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -19,7 +19,7 @@ featured-img:
 
 #Show categories at the end of posts
 categories:
-  active: true
+  active: false
 
 #Show date and read time under the post title
 date-under-post:
