--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 remote_theme : PandaSekh/Jekyll-YAMT
-title: YAMT
-description: "Yet Another Minimal Theme"
+title: rrrrr
+description: "sssss"
 url:  "https://u00938.github.io" # Actual base url of the website
-baseurl: ""           # url of the jekyll blog. e.g. if you set url to "mysite.com" and baseurl to "blog", the jekyll website will work on "mysite.com/blog"
+baseurl: "/"           # url of the jekyll blog. e.g. if you set url to "mysite.com" and baseurl to "blog", the jekyll website will work on "mysite.com/blog"
 author:
   name: "Alessio Franceschi"
   email: "alessiofranceschi2@gmail.com"
