--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 remote_theme : PandaSekh/Jekyll-YAMT
 # Site settings
 
-title: rrrrr
-description: "sssss"
+title: U0이는 개발자가 될수있을까
+description: "U0log | since 2020.10"
 url:  "https://u00938.github.io" # Actual base url of the website
 baseurl: ""           # url of the jekyll blog. e.g. if you set url to "mysite.com" and baseurl to "blog", the jekyll website will work on "mysite.com/blog"
 author:
