--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -2,4 +2,4 @@ pages:
   - {name: 'About', url: 'about.html'}
   - {name: 'Contact', url: 'contact.html'}
   - {name: 'Archive', url: 'archive.html'}
-  - {name: 'Get YAMT', url: 'https://github.com/PandaSekh/Jekyll-YAMT'}
+  - {name: 'U00938', url: 'https://github.com/u00938'}
