--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,9 +2,9 @@
 analytics-id: #leave blank to not use Analytics
 
 #Subtitle
-subtitle:
-  active: true
-  text: Yet Another Minimal Theme
+# subtitle:
+#   active: true
+#   text: Yet Another Minimal Theme
 
 #Nav 
 nav:
