--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,10 +2,9 @@
 analytics-id: #leave blank to not use Analytics
 
 #Subtitle
-# subtitle:
-#   active: true
-#   text: Yet Another Minimal Theme
-
+subtitle:
+  active: false
+  text: 
 #Nav 
 nav:
   pages:
