--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,5 +1,5 @@
 pages:
 #   - {name: 'TIL', url: 'about.html'}
 #   - {name: 'Contact', url: 'contact.html'}
-   - {name: 'Today_I_Learned', url: 'archive.html'}
+   - {name: 'TIL'}
 #   - {name: 'Go_to_U00938', url: 'https://github.com/u00938'}
