--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,11 @@ webmaster_verifications:
   baidu: 
 lang: en_US
 
-disqus_shortname: u00938-github-io
+comments:
+  provider               : "disqus" # 블로그 댓글 기능 false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
+  disqus:
+    shortname            : "u00938-github-io" # 블로그 댓글 기능 https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+
 
 #Highlighter
 kramdown:
