--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -35,4 +35,4 @@ related-posts:
 
 #Disqus
 disqus:
-  disqus_shortname: "your_username" #Your disqus shortname. Leave blank to deactivate disqus comments
+  disqus_shortname: "u00938-github-io" #Your disqus shortname. Leave blank to deactivate disqus comments
