--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -35,4 +35,5 @@ related-posts:
 
 #Disqus
 disqus:
+  active: true
   disqus_shortname: "u00938-github-io" #Your disqus shortname. Leave blank to deactivate disqus comments
